add network for checkers